# trein-schaduw

./: .env.dist  .gitignore  Dockerfile  README.md  cache.py  error.py  geometry.py  logic.py  main-search.py  main-stations.py  main.py  ns.py  plot.py  pyproject.toml  utils.py  web.py
.github/workflows/: build.yml  publish.yml
static/: index.css  result.css
templates/: error.html  index.html  result.html
