[project]
name = "trein-schaduw"
version = "0.1.0"
description = ""
authors = [
    {name = "Davvos11",email = "vosdavid2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "sun-position-calculator (>=1.0.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
